# fitpackpp

./: CMakeLists.txt
cmake/: add_version.cmake
cmake/lx/: bundle.cmake.in
cmake/win/: bundle.cmake.in
fitpackpp/: BSplineCurve.cpp  BSplineSurface.cpp
